##
## Copyright (C) 2019 Max Waine
##
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <https://www.gnu.org/licenses/>.
##

eternity_src += files(
   'i_input.cpp',
   'i_main.cpp',
   'i_midirpc.cpp',
   'i_net.cpp',
   'i_pcsound.cpp',
   'i_picker.cpp',
   'i_sdlgamepads.cpp',
   'i_sdlgl2d.cpp',
   'i_sdlmusic.cpp',
   'i_sdlsound.cpp',
   'i_sdltimer.cpp',
   'i_sdlvideo.cpp',
   'i_sound.cpp',
   'i_system.cpp',
   'mmus2mid.cpp',
   'ser_main.cpp',
)

## EOF

