##
## Copyright (C) 2019 Max Waine
##
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <https://www.gnu.org/licenses/>.
##

eternity_src += files(
   'txt_button.c',
   'txt_checkbox.c',
   'txt_conditional.c',
   'txt_desktop.c',
   'txt_dropdown.c',
   'txt_fileselect.c',
   'txt_gui.c',
   'txt_inputbox.c',
   'txt_io.c',
   'txt_label.c',
   'txt_radiobutton.c',
   'txt_scrollpane.c',
   'txt_sdl.c',
   'txt_separator.c',
   'txt_spinctrl.c',
   'txt_strut.c',
   'txt_table.c',
   'txt_utf8.c',
   'txt_widget.c',
   'txt_window_action.c',
   'txt_window.c',
)

## EOF

